# NeutralizeCarbon

./: README.md  folium.py  m.py  main.py  pyproject.toml
Crop Recommendation/: Crop Recommendation.ipynb  crop_model.sav  crop_recommendation.py  decoder.txt  make_prediction.py
Earthcoin/: api.py
NeutralizeCarbon_MCU/: NeutralizeCarbon_MCU.ino
templates/: index.html  index2.html
