[tool.poetry]
name = "neutralizecarbon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
replit = "^3.1.0"
pickle5 = "^0.0.11"
sklearn = "^0.0"
pandas = "^1.2.4"
flask-marshmallow = "^0.14.0"
flask-sqlalchemy = "^2.5.1"
folium = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
